# ACSpGEMM

./: CMakeLists.txt  LICENSE  README.md  reset.sh  setup.sh
include/: COO.h  CSR.h  Compare.h  Multiply.h  Transpose.h  Vector.h  dCSR.h
include/device/: ARowStorage.cuh  Chunk.cuh  HelperFunctions.cuh  MultiplyKernels.h  SortAndCombine.cuh  acSpGEMM_ChunksToCSR.cuh  acSpGEMM_DetermineBlockStarts.cuh  acSpGEMM_MergeGeneralized.cuh  acSpGEMM_MergeMaxChunks.cuh  acSpGEMM_MergeSimple.cuh  acSpGEMM_SpGEMM.cuh  acSpGEMM_SpGEMM.cuh.orig  consistent_gpu_memory.h
include/devicetools/: event.h  memory.h  stream.h
source/: COO.cpp  CSR.cpp  checkBitStability.cpp  dCSR.cpp  main.cpp  performTestCase.cpp
source/device/: Compare.cu  Multiply.cu  Transpose.cu  memory.cpp
test/: clean.sh  detailed_256_3_2_4_4_16_512_8__dTITAN V.csv  matrix_stats.csv  mem_256_3_2_4_4_16_512_8__dTITAN V.csv  perf_256_3_2_4_4_16_512_8__dTITAN V.csv  runall.bat  runall.sh
